# pfd-huggingface-starter

./: .gitignore  README.md  pyproject.toml
src/: main.py
