[tool.poetry]
name = "pfd-huggingface-starter"
version = "0.1.0"
description = "Poetry, FastAPI, Docker, Huggingface starter template"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
torch = {version = "^1.12.0", python = "^3.8", platform = "linux"}
transformers = "^4.20.1"
sentencepiece = "^0.1.96"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
